; ModuleID = '/home/carl/AnghaBench/linux/drivers/spi/extr_spi-omap2-mcspi.c_omap2_mcspi_irq_handler.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/spi/extr_spi-omap2-mcspi.c_omap2_mcspi_irq_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.omap2_mcspi = type { i32, i32 }

@OMAP2_MCSPI_IRQSTATUS = common dso_local global i32 0, align 4
@IRQ_NONE = common dso_local global i32 0, align 4
@OMAP2_MCSPI_IRQENABLE = common dso_local global i32 0, align 4
@OMAP2_MCSPI_IRQSTATUS_EOW = common dso_local global i32 0, align 4
@IRQ_HANDLED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*)* @omap2_mcspi_irq_handler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @omap2_mcspi_irq_handler(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca %struct.omap2_mcspi*, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = bitcast i8* %8 to %struct.omap2_mcspi*
  store %struct.omap2_mcspi* %9, %struct.omap2_mcspi** %6, align 8
  %10 = load %struct.omap2_mcspi*, %struct.omap2_mcspi** %6, align 8
  %11 = getelementptr inbounds %struct.omap2_mcspi, %struct.omap2_mcspi* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = load i32, i32* @OMAP2_MCSPI_IRQSTATUS, align 4
  %14 = call i32 @mcspi_read_reg(i32 %12, i32 %13)
  store i32 %14, i32* %7, align 4
  %15 = load i32, i32* %7, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %19, label %17

17:                                               ; preds = %2
  %18 = load i32, i32* @IRQ_NONE, align 4
  store i32 %18, i32* %3, align 4
  br label %35

19:                                               ; preds = %2
  %20 = load %struct.omap2_mcspi*, %struct.omap2_mcspi** %6, align 8
  %21 = getelementptr inbounds %struct.omap2_mcspi, %struct.omap2_mcspi* %20, i32 0, i32 1
  %22 = load i32, i32* %21, align 4
  %23 = load i32, i32* @OMAP2_MCSPI_IRQENABLE, align 4
  %24 = call i32 @mcspi_write_reg(i32 %22, i32 %23, i32 0)
  %25 = load i32, i32* %7, align 4
  %26 = load i32, i32* @OMAP2_MCSPI_IRQSTATUS_EOW, align 4
  %27 = and i32 %25, %26
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %29, label %33

29:                                               ; preds = %19
  %30 = load %struct.omap2_mcspi*, %struct.omap2_mcspi** %6, align 8
  %31 = getelementptr inbounds %struct.omap2_mcspi, %struct.omap2_mcspi* %30, i32 0, i32 0
  %32 = call i32 @complete(i32* %31)
  br label %33

33:                                               ; preds = %29, %19
  %34 = load i32, i32* @IRQ_HANDLED, align 4
  store i32 %34, i32* %3, align 4
  br label %35

35:                                               ; preds = %33, %17
  %36 = load i32, i32* %3, align 4
  ret i32 %36
}

declare dso_local i32 @mcspi_read_reg(i32, i32) #1

declare dso_local i32 @mcspi_write_reg(i32, i32, i32) #1

declare dso_local i32 @complete(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
